<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="issuer_name">Issuer Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="alternative_names">Alternative Names</string>
    <string name="app_name">Robust</string>
    <string name="action_settings">Settings</string>
    <string name="plain">Plain</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_splash">Loading…</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_login">Login</string>
    <string name="please_login">Please login.</string>
    <string name="title_activity_twitter_login">Twitter Login</string>
    <string name="twitter_loading_intro">Opening login page…</string>
    <string name="twitter_loading_outro">Logging in…</string>
    <string name="loading">Loading…</string>
    <string name="server_preferences">Server Settings</string>
    <string name="server_host">Server Hostname</string>
    <string name="server_port">Server Port</string>
    <string name="action_copy_message">Copy message body</string>
    <string name="action_user_profile">View user profile</string>
    <string name="title_activity_connection_status">Connection Status</string>
    <string name="asn1_common_name">Common Name</string>
    <string name="asn1_country">Country</string>
    <string name="asn1_state">State/Province</string>
    <string name="asn1_locality">Locality</string>
    <string name="asn1_organization">Organization</string>
    <string name="asn1_organizational_unit">Organization Unit</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="connection_status">Connection Status</string>
    <string name="channels">Channels</string>
    <string name="no_channels">No channels :(</string>
    <string name="controls">Controls</string>
    <string name="join_channel">Join Channel</string>
    <string name="new_conversation">New Conversation</string>
    <string name="peer">Peer</string>
    <string name="cipher_suite">Cipher Suite</string>
    <string name="protocol">Protocol</string>
    <string name="certificate_chain">Certificate Chain</string>
    <string name="biography">Biography</string>
    <string name="location">Location</string>
    <string name="send">Send</string>
    <string name="hint_type_message">Type message</string>
    <string name="desc_user_image">User image</string>
    <string name="enter_channel_name">Enter channel name:</string>
    <string name="join">Join</string>
    <string name="action_leave_channel">Leave channel</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_channel">An invalid channel was specified.</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="main_bandwidth_preferences">Bandwidth Settings</string>
    <string name="title_low_bandwidth_images">Low resolution images</string>
    <string name="summary_low_bandwidth_images">Only download lower resolution images</string>
    <string name="title_activity_main_preferences">Main Preferences</string>
    <string name="title_enable_notifications">Enable notifications</string>
    <string name='title_load_at_boot_time'>Load at boot time</string>
    <string name='summary_load_at_boot_time'>Robust will start when your phone starts</string>
    <string name="message_no_server_settings">No server settings found; please enter them!</string>
    <string name="verified">Verified and valid?</string>
    <string name="tls_no_match">NO (no matching names)</string>
    <string name="tls_matches_alt_name">YES (matching alternative name)</string>
    <string name="tls_matches_cn">YES (matches CN)</string>
    <string name="unknown">Unknown</string>
    <string name="conn_connecting">Connecting…</string>
    <string name="conn_disconnected">Disconnected.</string>
    <string name="conn_authenticating">Authenticating…</string>
    <string name="conn_not_authenticated">Not authenticated.</string>
    <string name="conn_no_authenticator">No authenticator!</string>
    <string name="message_backlog">Getting backlog…</string>
</resources>
