<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="so.brendan.robust.activities.MainActivity" >


    <item android:id="@+id/action_connection_status"
        android:title="@string/connection_status"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_connection"/>

    <item android:id="@+id/action_user_profile"
        android:title="@string/user_profile"
        android:orderInCategory="98"
        android:showAsAction="never"/>

    <item android:id="@+id/action_reconnect"
        android:title="@string/action_reconnect"
        android:orderInCategory="99"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
