<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="so.brendan.robust.activities.ConnectionStatusActivity">

            <TextView
                android:text="@string/verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_verified"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/verified"
                android:textStyle="bold"
                android:padding="12dp" />
            
            <TextView
                android:text="@string/peer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_peer"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/peer"
                android:padding="12dp" />

            <TextView
                android:text="@string/cipher_suite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_cipher_suite"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/cipher"
                android:padding="12dp" />

            <TextView
                android:text="@string/protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_protocol"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/protocol"
                android:padding="12dp" />

            <TextView
                android:text="@string/certificate_chain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_cert_chain"
                style="?android:attr/listSeparatorTextViewStyle" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/certificateChain"
                android:padding="12dp"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>