<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="so.brendan.robust.activities.UserProfileActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/fullName"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:layout_toLeftOf="@+id/displayPictureHolder"
                    android:layout_toStartOf="@+id/displayPictureHolder"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right|end"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/handle"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@android:color/secondary_text_light"
                    android:layout_below="@+id/fullName"
                    android:layout_toLeftOf="@+id/displayPictureHolder"
                    android:layout_toStartOf="@+id/displayPictureHolder"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right|end" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_border"
                    android:id="@+id/displayPictureHolder"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true">
                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:id="@+id/displayPicture"
                        android:contentDescription="@string/desc_user_image"
                        />
                </FrameLayout>

            </RelativeLayout>

            <TextView
                android:text="@string/biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/bio"
                android:padding="12dp" />

            <TextView
                android:text="@string/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/location"
                android:padding="12dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
